--- a/Rainbow_Calendar.html
+++ b/Rainbow_Calendar.html
@@ -1,14 +1,21 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>カレンダーマーキングアプリ</title>
+  <title>Rainbow Calendar</title>
   <style>
     * {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      touch-action: manipulation; /* iOSでのダブルタップズーム防止 */
     }
     body {
       font-family: Arial, sans-serif;
@@ -16,15 +23,15 @@
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      background-color: #1a1d1f; /* 背景色変更 */
-      color: white; /* 文字色を白に */
+      background-color: #1a1d1f;
+      color: white;
     }
     .container {
       width: 100%;
       max-width: 480px;
       padding: 20px;
       text-align: center;
-      background-color: #2c3133; /* コンテナ背景色 */
+      background-color: #2c3133;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
       border-radius: 8px;
     }
@@ -34,29 +41,50 @@
       align-items: center;
       margin-bottom: 20px;
     }
-    .calendar-header button {
+    #calendarTitle {
+      font-size: 20px;
+      font-weight: bold;
+      color: white;
+      flex-grow: 1;
+      text-align: center;
+    }
+    #markedCount {
+      font-size: 16px;
+      font-weight: bold;
+      margin-left: 10px;
+    }
+    #resetToCurrentMonth {
       padding: 5px 10px;
       font-size: 16px;
       color: white;
-      background-color: #444; /* ボタンの背景色 */
+      background-color: #444;
       border: none;
       border-radius: 4px;
       cursor: pointer;
       transition: background-color 0.3s;
     }
-    .calendar-header button:hover {
-      background-color: #555; /* ホバー時の色 */
+    #resetToCurrentMonth:hover {
+      background-color: #555;
     }
-    #currentMonth {
-      font-size: 18px;
-      font-weight: bold;
-      color: white;
+    .calendar-navigation {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 20px; /* カレンダーとボタンの干渉防止 */
+      margin-bottom: 20px; /* カレンダーとボタンの干渉防止 */
     }
-    #calendarTitle {
-      font-size: 20px;
-      font-weight: bold;
+    .calendar-navigation button {
+      padding: 5px 10px;
+      font-size: 16px;
       color: white;
-      margin-bottom: 20px;
+      background-color: #444;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    .calendar-navigation button:hover {
+      background-color: #555;
     }
     .calendar {
       display: grid;
@@ -70,18 +98,16 @@
       font-size: 16px;
       text-align: center;
       cursor: pointer;
-      background-color: #444; /* 日付ボタン背景色 */
+      background-color: #444;
       border-radius: 4px;
       transition: background-color 0.3s;
-      width: 100%;
-      height: 50px;
-      color: white; /* 文字色 */
+      color: white;
     }
     .day:hover {
-      background-color: #555; /* ホバー時 */
+      background-color: #555;
     }
     .marked {
-      background-color: orange;
+      background-color: #FF4500;
     }
     .color-selection {
       display: grid;
@@ -101,15 +127,7 @@
     .color-box.selected {
       border: 2px solid white;
     }
-    .footer {
-      margin-top: 20px;
-      font-size: 16px;
-      color: white;
-    }
-    .color-button-container {
-      margin-top: 10px;
-    }
-    #resetToCurrentMonth, #fillSelectedColor {
+    #fillSelectedColor {
       padding: 5px 10px;
       font-size: 16px;
       color: white;
@@ -119,9 +137,9 @@
       cursor: pointer;
       transition: background-color 0.3s;
       width: 100%;
-      margin-top: 5px;
+      margin-top: 10px;
     }
-    #resetToCurrentMonth:hover, #fillSelectedColor:hover {
+    #fillSelectedColor:hover {
       background-color: #555;
     }
   </style>
@@ -129,8 +147,13 @@
 <body>
 
   <div class="container">
-    <div id="calendarTitle">Rainbow Calendar</div> <!-- タイトル欄（空白） -->
     <div class="calendar-header">
+      <button id="resetToCurrentMonth">現在の月に戻る</button>
+      <div id="calendarTitle">カレンダー</div>
+      <span id="markedCount">日数: 0</span>
+    </div>
+
+    <div class="calendar-navigation">
       <button id="prevMonth">前月</button>
       <span id="currentMonth"></span>
       <button id="nextMonth">来月</button>
@@ -142,14 +165,7 @@
       <!-- 色の選択ボタン -->
     </div>
 
-    <div class="color-button-container">
-      <button id="fillSelectedColor">選択した色で塗りつぶす</button>
-    </div>
-
-    <div class="footer">
-      <p>マーキング済みの日数: <span id="markedCount">0</span></p>
-      <button id="resetToCurrentMonth">現在の月に戻る</button>
-    </div>
+    <button id="fillSelectedColor">選択した色で塗りつぶす</button>
   </div>
 
   <script>
@@ -161,7 +177,6 @@
     const fillSelectedColorButton = document.getElementById('fillSelectedColor');
     const markedCountDisplay = document.getElementById('markedCount');
     const colorSelection = document.getElementById('colorSelection');
-    const calendarTitle = document.getElementById('calendarTitle');
 
     const colors = [
       '#1D1D1D', '#ED7D95', '#E7D600', '#D81C2F', '#FF5800',
@@ -177,7 +192,7 @@
     let tapCount = 0;
 
     function updateMarkedCount() {
-      markedCountDisplay.textContent = Object.keys(markedDates).length;
+      markedCountDisplay.textContent = `日数: ${Object.keys(markedDates).length}`;
     }
 
     function renderCalendar() {
@@ -235,8 +250,9 @@
         });
         localStorage.setItem('markedDates', JSON.stringify(markedDates));
         renderCalendar();
-        tapCount = 0; // タップ数リセット
+        tapCount = 0;
       }
+      setTimeout(() => { tapCount = 0; }, 300);
     }
 
     function createColorButtons() {
@@ -245,6 +261,9 @@
         const colorBox = document.createElement('div');
         colorBox.classList.add('color-box');
         colorBox.style.backgroundColor = color;
+        if (color === selectedColor) {
+          colorBox.classList.add('selected');
+        }
         colorBox.addEventListener('click', () => {
           selectedColor = color;
           document.querySelectorAll('.color-box').forEach(box => box.classList.remove('selected'));
