--- a/bright.html
+++ b/bright.html
@@ -11,12 +11,13 @@
         }
         body {
             margin: 0;
-            background-color: #D3D3D3; /* グレーの背景 */
+            background-color: #1a1d1f; /* グレーの背景 */
             font-family: "Bender", sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            color: white;
         }
         .container {
             max-width: 390px; /* iPhone13の幅 */
