--- a/bright.html
+++ b/bright.html
@@ -23,7 +23,7 @@
             max-width: 390px; /* iPhone13の幅 */
             max-height: 500px; /* 縦のサイズを少し小さく */
             padding: 20px;
-            background-color: white;
+            background-color: #2c3133;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             text-align: left;
