--- a/bright.html
+++ b/bright.html
@@ -20,20 +20,17 @@
             color: white;
         }
         .container {
-            max-width: 390px; /* iPhone13の幅 */
-            max-height: 500px; /* 縦のサイズを少し小さく */
+            width: 350px; /* 横幅固定 */
             padding: 20px;
             background-color: #2c3133;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             text-align: left;
-            overflow-y: auto;
-            transition: all 0.1s ease-in-out;
         }
         .banner {
             display: flex;
             height: 30px;
-            margin-bottom: 15px; /* 少し余白を減らす */
+            margin-bottom: 15px;
         }
         .banner div {
             flex: 1;
@@ -51,8 +48,11 @@
         .banner div:nth-child(11) { background-color: #37B484; }
         .banner div:nth-child(12) { background-color: #A99E98; }
         .time {
-            font-size: 36px; /* 時刻を少し小さく表示 */
+            font-size: 36px; /* 基本の時刻サイズ */
             margin-bottom: 5px;
+        }
+        .milliseconds {
+            font-size: 30px; /* ミリ秒サイズ */
         }
         .description {
             font-size: 16px;
@@ -61,7 +61,10 @@
         .controls {
             display: flex;
             justify-content: space-between;
-            margin-top: 10px;
+            margin-top: 5px; /* current-dateとの余白 */
+        }
+        #current-date {
+            margin: 0 5px;
         }
         .button {
             background-color: #ddd;
@@ -101,52 +104,66 @@
     </div>
 
     <script>
-        const lat = 35.6894;
-        const lon = 139.6917;
+        const lat = 35.6581; // 緯度
+        const lon = 139.7414; // 経度
         const tz = 'Asia/Tokyo';
         let currentDate = new Date();
+        let sunsetData = null;
+
+        function formatMilliseconds(ms) {
+            const firstDigit = Math.floor(ms / 100); // 上位1桁
+            return `${firstDigit}0`; // 2桁目を0に固定
+        }
 
         function updateDisplay() {
             const options = { timeZone: tz, hour12: false, year: 'numeric', month: '2-digit', day: '2-digit' };
             document.getElementById('current-date').textContent = currentDate.toLocaleDateString('ja-JP', options);
 
-            const now = new Date().toLocaleTimeString('ja-JP', { timeZone: tz, hour12: false });
-            document.getElementById('current-time').textContent = now;
+            const now = new Date();
+            const formattedTime = now.toLocaleTimeString('ja-JP', { timeZone: tz, hour12: false });
+            const milliseconds = formatMilliseconds(now.getMilliseconds());
+            document.getElementById('current-time').innerHTML = `${formattedTime}.<span class="milliseconds">${milliseconds}</span>`;
 
-            fetch(`https://api.sunrise-sunset.org/json?lat=${lat}&lng=${lon}&date=${currentDate.toISOString().split('T')[0]}&formatted=0`)
+            if (sunsetData) {
+                const sunset = new Date(sunsetData.results.sunset);
+                const sunsetTime = new Date(sunset).toLocaleTimeString('ja-JP', { timeZone: tz, hour12: false });
+                document.getElementById('sunset-time').innerHTML = `${sunsetTime}.<span class="milliseconds">00</span>`;
+
+                const sunsetPlus30 = new Date(sunset.getTime() + 30 * 60 * 1000);
+                sunsetPlus30.setSeconds(0);
+                const sunsetPlus30Time = new Date(sunsetPlus30).toLocaleTimeString('ja-JP', { timeZone: tz, hour12: false });
+                document.getElementById('sunset-plus30').innerHTML = `${sunsetPlus30Time}.<span class="milliseconds">00</span>`;
+
+                const minus318 = new Date(sunsetPlus30.getTime() - (3 * 60 + 18) * 1000);
+                document.getElementById('minus318').innerHTML = `${minus318.toLocaleTimeString('ja-JP', { timeZone: tz, hour12: false })}.<span class="milliseconds">00</span>`;
+
+                const minus225 = new Date(sunsetPlus30.getTime() - (2 * 60 + 25) * 1000);
+                document.getElementById('minus225').innerHTML = `${minus225.toLocaleTimeString('ja-JP', { timeZone: tz, hour12: false })}.<span class="milliseconds">00</span>`;
+            }
+        }
+
+        function fetchSunsetData() {
+            const url = `https://api.sunrise-sunset.org/json?lat=${lat}&lng=${lon}&date=${currentDate.toISOString().split('T')[0]}&formatted=0`;
+            fetch(url)
                 .then(response => response.json())
                 .then(data => {
-                    const sunset = new Date(data.results.sunset);
-                    const sunsetTime = new Date(sunset).toLocaleTimeString('ja-JP', { timeZone: tz, hour12: false });
-                    document.getElementById('sunset-time').textContent = sunsetTime;
-
-                    // 日没後30分の秒数を00秒に固定
-                    const sunsetPlus30 = new Date(sunset.getTime() + 30 * 60 * 1000);
-                    sunsetPlus30.setSeconds(0); // 秒を00に設定
-                    const sunsetPlus30Time = new Date(sunsetPlus30).toLocaleTimeString('ja-JP', { timeZone: tz, hour12: false });
-                    document.getElementById('sunset-plus30').textContent = sunsetPlus30Time;
-
-                    // 3分18秒前と2分25秒前
-                    const minus318 = new Date(sunsetPlus30.getTime() - (3 * 60 + 18) * 1000);
-                    const minus225 = new Date(sunsetPlus30.getTime() - (2 * 60 + 25) * 1000);
-
-                    document.getElementById('minus318').textContent = minus318.toLocaleTimeString('ja-JP', { timeZone: tz, hour12: false });
-                    document.getElementById('minus225').textContent = minus225.toLocaleTimeString('ja-JP', { timeZone: tz, hour12: false });
+                    sunsetData = data;
+                    updateDisplay();
                 });
         }
 
         document.getElementById('prev-day').addEventListener('click', () => {
             currentDate.setDate(currentDate.getDate() - 1);
-            updateDisplay();
+            fetchSunsetData();
         });
 
         document.getElementById('next-day').addEventListener('click', () => {
             currentDate.setDate(currentDate.getDate() + 1);
-            updateDisplay();
+            fetchSunsetData();
         });
 
-        updateDisplay();
-        setInterval(updateDisplay, 1000); // 1秒ごとに更新
+        fetchSunsetData();
+        setInterval(updateDisplay, 100); // 0.1秒ごとに現在時刻を更新
     </script>
 </body>
 </html>
