--- a/renban_Downlaoder.html
+++ b/renban_Downlaoder.html
@@ -109,10 +109,8 @@
           <input type="number" id="startNum" value="0" />
           <label>終了番号</label>
           <input type="number" id="endNum" value="4" />
-          <!--
           <label>桁数</label>
           <input type="number" id="digit" value="4" />
-          -->
         </div>
         <div class="input-line">
           <label>インターバル（秒）</label>
@@ -176,7 +174,7 @@
           } else if (['clear', 'cls'].includes(command)) {
             document.getElementById('output').innerHTML = ''; // ログを消去
           } else {
-            log('そんなコマンドはございません＾＾', 'status');
+            log('そんなコマンドはございましぇ～ん＾＾', 'status');
           }
           e.target.value = ''; // 入力欄をクリア
         }
@@ -200,7 +198,7 @@
       const base = document.getElementById('baseUrl').value;
       const start = parseInt(document.getElementById('startNum').value);
       const end = parseInt(document.getElementById('endNum').value);
-      const digit = 4; // 桁数を固定（デフォルト4桁）
+      const digit = parseInt(document.getElementById('digit').value);; // 桁数を固定（デフォルト4桁）
 
       log('$ generateUrls', 'status'); // ボタン操作をコマンドとしてログ
       urlList = [];
@@ -261,5 +259,4 @@
     }
   </script>
 </body>
-
 </html>
