--- a/password.html
+++ b/password.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>パスワード生成ツール</title>
     <style>
+        html {
+            height: 100%;
+        }
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
@@ -13,6 +17,7 @@
             background-color: #f0f2f5;
             color: #333;
             transition: background-color 0.3s, color 0.3s;
+            height: 100%;
         }
 
         @media (prefers-color-scheme: dark) {
@@ -23,7 +28,7 @@
         }
 
         #input-form {
-            position: absolute;
+            position: fixed;
             bottom: 20vh;
             left: 50%;
             transform: translateX(-50%);
@@ -184,8 +189,27 @@
         const resultsDiv = document.getElementById('results');
         const errorDiv = document.getElementById('error');
         const copyMessage = document.getElementById('copy-message');
+        const inputForm = document.getElementById('input-form');
 
         generateBtn.addEventListener('click', generatePasswords);
+
+        // Adjust input form position when keyboard opens using Visual Viewport API
+        function updateInputPosition() {
+            if ('visualViewport' in window) {
+                const vh = window.innerHeight * 0.01;
+                const baseBottom = 20 * vh; // Default 20vh
+                const keyboardHeight = window.innerHeight - window.visualViewport.height;
+                inputForm.style.bottom = (baseBottom + keyboardHeight) + 'px';
+            }
+        }
+
+        // Initial call
+        updateInputPosition();
+
+        // Listen to resize events
+        window.visualViewport.addEventListener('resize', updateInputPosition);
+        window.visualViewport.addEventListener('scroll', updateInputPosition);
+        window.addEventListener('resize', updateInputPosition);
 
         function isAlphanumeric(str) {
             if (str.length === 0) return false;
