--- a/password.html
+++ b/password.html
@@ -192,6 +192,12 @@
         const inputForm = document.getElementById('input-form');
 
         generateBtn.addEventListener('click', generatePasswords);
+        inputField.addEventListener('input', generatePasswords);
+        inputField.addEventListener('keydown', (e) => {
+            if (e.key === 'Enter') {
+                generatePasswords();
+            }
+        });
 
         // Adjust input form position when keyboard opens using Visual Viewport API
         function updateInputPosition() {
@@ -211,6 +217,11 @@
         window.visualViewport.addEventListener('scroll', updateInputPosition);
         window.addEventListener('resize', updateInputPosition);
 
+        function cleanName(str) {
+            // Remove specified symbols: common password and SNS symbols, including full-width versions
+            return str.replace(/[!！@＠#＃\$＄%％\^＾&＆\*＊\(\)（）_＿\+＋\-ー=＝\[\]［］\{\}｛｝\|｜;；:：'’"”，,．\/／<＜>＞\?？~～]/g, '');
+        }
+
         function isAlphanumeric(str) {
             if (str.length === 0) return false;
             for (let i = 0; i < str.length; i++) {
@@ -225,7 +236,6 @@
         function generatePasswords() {
             const input = inputField.value.trim();
             errorDiv.textContent = '';
-            resultsDiv.innerHTML = '';
 
             if (input.length < 4) { // Minimum name length 1 + date 3
                 errorDiv.textContent = '正しい名前（英数字）と日付（YYYYMMDDまたはMMDD、3～4桁または7～8桁）を入力してください（例: 20000415 または 0415）';
@@ -246,8 +256,11 @@
                 return;
             }
 
-            const name = input.substring(0, dateStart);
+            let name = input.substring(0, dateStart);
             const dateStr = input.substring(dateStart);
+
+            // Clean the name by removing specified symbols
+            name = cleanName(name);
 
             if (!isAlphanumeric(name)) {
                 errorDiv.textContent = '正しい名前（英数字）と日付（YYYYMMDDまたはMMDD、3～4桁または7～8桁）を入力してください（例: 20000415 または 0415）';
@@ -309,6 +322,9 @@
                 errorDiv.textContent = '有効な日付を入力してください（月は01-12、日は01-31）';
                 return;
             }
+
+            // If we reach here, input is valid, so clear previous results and generate new ones
+            resultsDiv.innerHTML = '';
 
             // Prepare name variations
             const lowerName = name.toLowerCase();
